--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@angular/router": "~11.2.9",
     "angular2-notifications": "^9.0.0",
     "ng-push": "^0.2.2",
+    "public-ip": "^4.0.3",
     "rxjs": "~6.6.0",
     "sweetalert2": "^10.16.4",
     "tslib": "^2.0.0",
